--- a/public/gallery.ejs
+++ b/public/gallery.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Rocky Gallery</title>
+    <link rel="icon" href="./images/icon/site_icon.png" type="image/png">
+    <link rel="apple-touch-icon" href="./images/icon/site_icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--For youtube logo font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
